# swagger-ada

./: .gitignore  .gitmodules  Makefile  Makefile.conf.in  Makefile.in  NEWS  NEWS.md  NOTICE.txt  README.md  alire-server.toml  alire.toml  configure  configure.ac  coverage.sh  dynamo.xml  openapi.gpr  openapi.gpr.in  openapi_server.gpr.in  openapi_tests.gpr.in  swagger.gpr  swagger.gpr.in  swagger_server.gpr.in  swagger_tests.gpr.in  testapi.properties  testapi_model.gpr.in  testapi_server.gpr.in  tests-client.properties  tests.properties
.alire/: openapi-servers-config.ads  openapi.gpr  openapi_config.gpr  openapi_server.gpr  swagger-servers-config.ads
.alire/server/: alire.toml  openapi_server.gpr
debian/: ada_libraries  changelog  control  copyright  docs  rules
distrib/: swagger.gpr.in  swagger_server.gpr.in
docker/: Dockerfile
docs/: Installation.md  Tutorial.md  index.md  title.md
regtests/: alire.toml  openapi-clients-tests.adb  openapi-clients-tests.ads  openapi-tests.adb  openapi-tests.ads  openapi-testsuite.adb  openapi-testsuite.ads  openapi_tests.gpr  openapi_tests_aws.gpr  openapi_tests_curl.gpr  responses-binary.yaml  swagger-clients-tests.adb  swagger-clients-tests.ads  swagger-tests.adb  swagger-tests.ads  swagger-testsuite.adb  swagger-testsuite.ads  swagger.yaml  swagger_harness.adb  swagger_harness_aws.adb  swagger_harness_curl.adb  testapi_model.gpr  testapi_server.gpr  testapi_server_aws.gpr  types-enum.yaml  types.yaml
regtests/client/: config.gpr  enums.gpr  testapi.gpr  testapi_config.gpr  testbinary.gpr  testbinary_config.gpr  types.gpr  types_config.gpr
regtests/client/.openapi-generator/: FILES  VERSION
regtests/client/src/: enums-client.adb  enums.ads  testapi-client.adb  testbinary-client.adb  testbinary.ads  types-client.adb  types.ads
regtests/client/src/client/: enums-clients.adb  enums-clients.ads  testapi-clients.adb  testapi-clients.ads  testbinary-clients.adb  testbinary-clients.ads  types-clients.adb  types-clients.ads
regtests/client/src/model/: enums-models.adb  testapi-models.adb  testapi-models.ads  testbinary-models.adb  testbinary-models.ads
regtests/model/: external.ads
regtests/server/: .openapi-generator-ignore  .swagger-codegen-ignore  README.md  enums.gpr  enums.properties  enums_config.gpr  testapi.gpr  testapi.properties  testbinary.gpr  testbinary.properties  types.gpr  types.properties
regtests/server/.openapi-generator/: FILES  VERSION
regtests/server/src/: enums-server.adb  enums-servers.adb  enums-servers.ads  testapi-server.adb  testapi-servers.adb  testapi-servers.ads  testapi.ads  testbinary-server.adb  testbinary-servers.adb  testbinary-servers.ads  types-server.adb  types-servers.adb  types-servers.ads
regtests/server/src/aws/: enums_aws.adb  testapi_aws.adb  testbinary_aws.adb  types_aws.adb
regtests/server/src/ews/: enums_ews.adb  testapi_ews.adb  testbinary_ews.adb  types_ews.adb
regtests/server/src/model/: enums-models.adb  enums-models.ads  testapi-models.adb  testapi-models.ads  testbinary-models.adb  testbinary-models.ads  types-models.adb  types-models.ads
regtests/server/src/server/: enums-skeletons.adb  enums-skeletons.ads  testapi-skeletons.adb  testapi-skeletons.ads  testbinary-skeletons.adb  testbinary-skeletons.ads  types-skeletons.adb  types-skeletons.ads
regtests/src/: openapi-clients-tests.adb  openapi-clients-tests.ads  openapi-tests.adb  openapi-tests.ads  openapi-testsuite.adb  openapi-testsuite.ads  openapi_harness_aws.adb  openapi_harness_curl.adb
scripts/: openapi-generate-client  openapi-generate-server  openapi-generator
server/: alire.toml  openapi_server.gpr  swagger_server.gpr
server/src/: openapi-servers-applications.adb  openapi-servers-applications.ads  openapi-servers-config.gpb  openapi-servers-operation.adb  openapi-servers-operation.ads  openapi-servers.adb  openapi-servers.ads
src/: openapi-clients.adb  openapi-clients.ads  openapi-credentials-oauth.adb  openapi-credentials-oauth.ads  openapi-credentials.ads  openapi-streams-forms.adb  openapi-streams-forms.ads  openapi-streams.adb  openapi-streams.ads  openapi.adb  openapi.ads  swagger-clients.adb  swagger-clients.ads  swagger-credentials-oauth.adb  swagger-credentials-oauth.ads  swagger-credentials.ads  swagger-servers-applications.adb  swagger-servers-applications.ads  swagger-servers-aws.ads  swagger-servers-operation.adb  swagger-servers-operation.ads  swagger-servers.adb  swagger-servers.ads  swagger-streams-forms.adb  swagger-streams-forms.ads  swagger-streams.adb  swagger-streams.ads  swagger.adb  swagger.ads
src/server/: openapi-servers-applications.adb  openapi-servers-aws.ads  openapi-servers-config.gpb  openapi-servers-operation.adb  openapi-servers-operation.ads  openapi-servers.adb  openapi-servers.ads  swagger-servers-applications.adb  swagger-servers-config.gpb  swagger-servers-operation.adb  swagger-servers.adb  swagger-servers.ads
web/ui/: index.html  swagger-initializer.js
(+2 files in other folders)
